--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="icon" type="image/x-icon" href="../../general_asset/Logo.png">
+    <link rel="icon" type="image/x-icon" href="general_asset/Logo.png">
     <style type="text/css">
         body {
             margin: 0; /* Remove default margin */
