--- a/homepage/Emergency_kit/Earthquake - Emergency Kit/earthquake_emergencykit.html
+++ b/homepage/Emergency_kit/Earthquake - Emergency Kit/earthquake_emergencykit.html
@@ -36,10 +36,10 @@
             <div class="logo">
 
                 <div>
-                    <a href="../../../general_asset/Logo.png"><img style="width: 50px; height: auto;" src="../../../general_asset/Logo.png" alt=""></a>
+                    <a href="../../../index.html"><img style="width: 50px; height: auto;" src="../../../general_asset/Logo.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="../../Homepage/index.html">
+                    <a href="../../../index.html">
                         <h1>RESCUE <span class="colored">LINK</span></h1>
                     </a>
                 </div>
@@ -53,7 +53,7 @@
                 <div class="reg"><a href="../../../emergency_kit/emergency kit.html"><button>Emergency Kit</button></a></div>
                 <div class="reg"><a href="../../../about_us/aboutus.html"><button>About Us</button></a></div>
                 <div class="reg"><a href="../../../about_us/aboutus.html#contact"><button>Contact Us</button></a></div>
-                <div class="reg"><a href="../../../index.html"><button>Credits</button></a></div>
+                <div class="reg"><a href="../../../reference/reference.html"><button>Credits</button></a></div>
                 <div class="hotline"><a href="../../../hotline_number/hotline.html"><button>Hotline Numbers</button></a></div>
                 <div class="navbar">
                     
@@ -341,7 +341,7 @@
 
                 <div class="bottom_text">
                     <div class="home_about">
-                        <a href="../../Homepage/index.html">
+                        <a href="../../../index.html">
                             <p>Home</p>
                         </a>
                         <br><br>
@@ -351,7 +351,7 @@
                     </div>
 
                     <div class="disasters_contact">
-                        <a href="../../Homepage/index.html#disasters">
+                        <a href="../../../index.html#disasters">
                             <p>Disasters</p>
                         </a>
                         <br><br>
