--- a/homepage/Faqs/FAQS_tsunami/FAQ.html
+++ b/homepage/Faqs/FAQS_tsunami/FAQ.html
@@ -38,9 +38,9 @@
         <div class="navigation">
             <div class="logo">
 
-                <div><a href="../../Homepage/index.html"><img style="width: 50px; height: auto;"
+                <div><a href="../../../index.html"><img style="width: 50px; height: auto;"
                             src="../../../general_asset/Logo.png" alt=""></a></div>
-                <div><a href="../../Homepage/index.html">
+                <div><a href="../../../index.html">
                         <h1>RESCUE <span class="colored">LINK</span></h1>
                     </a></div>
 
@@ -311,7 +311,7 @@
 
                 <div class="bottom_text">
                     <div class="home_about">
-                        <a href="../../Homepage/index.html">
+                        <a href="../../../index.html">
                             <p>Home</p>
                         </a>
                         <br><br>
@@ -321,7 +321,7 @@
                     </div>
 
                     <div class="disasters_contact">
-                        <a href="../../Homepage/index.html#disasters">
+                        <a href="../../../index.html#disasters">
                             <p>Disasters</p>
                         </a>
                         <br><br>
