--- a/homepage/content_disaster/Flood (Content with Block)/block_1/prepare.html
+++ b/homepage/content_disaster/Flood (Content with Block)/block_1/prepare.html
@@ -38,21 +38,21 @@
         <div class="navigation">
             <div class="logo">
 
-                <div><a href="../../../Homepage/index.html"><img style="width: 50px; height: auto;"
+                <div><a href="../../../../index.html"><img style="width: 50px; height: auto;"
                             src="../../../../general_asset/Logo.png" alt=""></a></div>
-                <div><a href="../../../Homepage/index.html">
+                <div><a href="../../../../index.html">
                         <h1>RESCUE <span class="colored">LINK</span></h1>
                     </a></div>
 
             </div>
             <nav id="navButtons">
-                <div class="reg"><a href="../../../Homepage/index.html"><button>Home</button></a></div>
-                <div class="reg"><a href="../../../Homepage/index.html#disasters"><button>Disasters</button></a></div>
+                <div class="reg"><a href="../../../../index.html"><button>Home</button></a></div>
+                <div class="reg"><a href="../../../../index.html#disasters"><button>Disasters</button></a></div>
                 <div class="reg"><a href="../../../../emergency_kit/emergency kit.html"><button>Emergency Kit</button></a></div>
                 <div class="reg"><a href="../../../../about_us/aboutus.html"><button>About Us</button></a></div>
                 <div class="reg"><a href="../../../../about_us/aboutus.html#contact"><button>Contact Us</button></a></div>
                 <div class="reg"><a href="../../../../reference/reference.html"><button>Credits</button></a></div>
-                <div class="hotline"><a href="../../../../hotline_number/hotline_number.html"><button>Hotline Numbers</button></a></div>
+                <div class="hotline"><a href="../../../../hotline_number/hotline.html"><button>Hotline Numbers</button></a></div>
                 <div class="navbar">
                     
             </nav>
@@ -297,7 +297,7 @@
 
             <div class="bottom_text">
                 <div class="home_about">
-                    <a href="../../../Homepage/index.html">
+                    <a href="../../../../index.html">
                         <p>Home</p>
                     </a>
                     <br><br>
@@ -307,7 +307,7 @@
                 </div>
 
                 <div class="disasters_contact">
-                    <a href="../../../Homepage/index.html#disasters">
+                    <a href="../../../../index.html#disasters">
                         <p>Disasters</p>
                     </a>
                     <br><br>
